Finish app base template

--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -6,12 +6,18 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Destructurama.Attributed" />
 		<PackageReference Include="Immediate.Apis"/>
 		<PackageReference Include="Immediate.Handlers"/>
 		<PackageReference Include="Immediate.Validations"/>
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
 		<PackageReference Include="Microsoft.EntityFrameworkCore"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 		<PackageReference Include="NodaTime"/>
+		<PackageReference Include="NodaTime.Serialization.SystemTextJson" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL"/>
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NodaTime"/>
 		<PackageReference Include="Npgsql.NodaTime"/>
@@ -21,6 +27,7 @@
 		<PackageReference Include="Serilog.Enrichers.Thread"/>
 		<PackageReference Include="Serilog.Exceptions.EntityFrameworkCore"/>
 		<PackageReference Include="Serilog.Sinks.Console"/>
+		<PackageReference Include="Serilog.Sinks.Seq" />
 		<PackageReference Include="Swashbuckle.AspNetCore"/>
 		<PackageReference Include="ThisAssembly.Git">
 			<PrivateAssets>all</PrivateAssets>
@@ -35,7 +42,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<AdditionalFiles Include="BannedSymbols.txt"/>
+		<AdditionalFiles Include="../../BannedSymbols.txt"/>
 	</ItemGroup>
 
 </Project>
