Move exception startup code to it's own folder.

--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -47,4 +47,8 @@
 		<AdditionalFiles Include="../../BannedSymbols.txt"/>
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\Timespace.SourceGenerators\Timespace.SourceGenerators\Timespace.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	</ItemGroup>
+
 </Project>
