--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,11 +4,16 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="AutoRegisterInject" Version="1.4.1" />
+    <PackageVersion Include="Basic.Reference.Assemblies.Net80" Version="1.7.2" />
     <PackageVersion Include="Destructurama.Attributed" Version="4.0.0" />
     <PackageVersion Include="Immediate.Apis" Version="1.1.0" />
     <PackageVersion Include="Immediate.Handlers" Version="1.4.0" />
     <PackageVersion Include="Immediate.Validations" Version="0.17.0" />
+    <PackageVersion Include="MailKit" Version="4.7.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.6" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Common" Version="4.9.2" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.9.2" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.2" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.6" />
     <PackageVersion Include="NodaTime" Version="3.1.11" />
@@ -27,5 +32,9 @@
     <PackageVersion Include="Serilog.Sinks.Seq" Version="8.0.0" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageVersion Include="ThisAssembly.Git" Version="1.4.3" />
+    <PackageVersion Include="xunit" Version="2.9.0" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
+    <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
 </Project>
