--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -11,6 +11,7 @@
 		<PackageReference Include="Immediate.Apis"/>
 		<PackageReference Include="Immediate.Handlers"/>
 		<PackageReference Include="Immediate.Validations"/>
+		<PackageReference Include="MailKit" />
 		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
 		<PackageReference Include="Microsoft.EntityFrameworkCore"/>
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design">
