Move sourcegen project from nested folder

--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -49,7 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Timespace.SourceGenerators\Timespace.SourceGenerators\Timespace.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	  <ProjectReference Include="..\Timespace.SourceGenerators\Timespace.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 </Project>
