Add analyzer & codefixes for permission policy generator

--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -50,6 +50,11 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\Timespace.SourceGenerators\Timespace.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	  <ProjectReference Include="..\Timespace.Analyzers\Timespace.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Infrastructure\Permissions\" />
 	</ItemGroup>
 
 </Project>
