--- a/tests/Timespace.SourceGenerators.Tests/Timespace.SourceGenerators.Tests.csproj
+++ b/tests/Timespace.SourceGenerators.Tests/Timespace.SourceGenerators.Tests.csproj
@@ -11,8 +11,12 @@
 
     <ItemGroup>
         <PackageReference Include="Basic.Reference.Assemblies.Net80" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CodeFix.Testing" />
         <PackageReference Include="Microsoft.CodeAnalysis.Common" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Analyzer.Testing.XUnit" />
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeFix.Testing.XUnit" />
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" />
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
         <PackageReference Include="xunit" />
@@ -27,6 +31,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Timespace.Analyzers\Timespace.Analyzers.csproj" />
       <ProjectReference Include="..\..\src\Timespace.SourceGenerators\Timespace.SourceGenerators.csproj" />
     </ItemGroup>
 
