--- a/.editorconfig
+++ b/.editorconfig
@@ -298,6 +298,7 @@ dotnet_diagnostic.CS9179.severity = error               # CS9179: Primary constr
 dotnet_diagnostic.SYSLIB1045.severity = error           # SYSLIB1045: Use GeneratedRegexAttribute to generate the regular expression implementation at compile time.
 
 # Miscellaneous analyzers
+dotnet_diagnostic.CA1002.severity = none                # CA1002: Do not expose non-generic lists
 dotnet_diagnostic.CA1034.severity = none                # CA1034: Nested types should not be visible
 dotnet_diagnostic.CA1051.severity = error               # CA1051: Do not declare visible instance fields
 dotnet_diagnostic.CA1062.severity = none                # CA1062: Validate arguments of public methods
@@ -309,6 +310,7 @@ dotnet_diagnostic.CA1512.severity = error               # CA1512: Use `ArgumentO
 dotnet_diagnostic.CA1513.severity = error               # CA1513: Use `ObjectDisposedException` throw helper
 dotnet_diagnostic.CA1515.severity = none                # CA1515: Consider making public types internal
 dotnet_diagnostic.CA1716.severity = none                # CA1716: Identifiers should not match keywords
+dotnet_diagnostic.CA1724.severity = none                # CA1724: The type name $1 conflicts in whole or in part with the namespace name '$2'.
 dotnet_diagnostic.CA1812.severity = none                # CA1812: Avoid uninstantiated internal classes
 dotnet_diagnostic.CA1822.severity = warning             # CA1822: Mark members as static
 dotnet_diagnostic.CA1825.severity = error               # CA1825: Avoid zero-length array allocations
