--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,16 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.0",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "dayjs": "^1.11.11",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
+    "pretty-bytes": "^6.1.1",
     "primevue": "^4.0.0",
     "vue": "^3.4.29",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
