--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,12 +14,16 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.0",
+    "@tanstack/vue-query": "^5.51.1",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "intl-tel-input": "^23.3.2",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "pretty-bytes": "^6.1.1",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.0",
     "vue": "^3.4.29",
     "vue-i18n": "^9.13.1",
@@ -28,6 +32,7 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
