--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -36,6 +36,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Scriban" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -54,7 +55,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="Infrastructure\Permissions\" />
+		<None Remove=".\Infrastructure\Email\Templates\*.sbntxt" />
+		<EmbeddedResource Include=".\Infrastructure\Email\Templates\*.sbntxt" Kind="Text" />
 	</ItemGroup>
-
+	
 </Project>
