--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,17 +19,20 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.7.2",
     "dayjs": "^1.11.11",
+    "iconify-icon": "^2.1.0",
     "intl-tel-input": "^23.3.2",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "pretty-bytes": "^6.1.1",
-    "primeicons": "^7.0.0",
     "primevue": "^4.0.0",
     "vue": "^3.4.29",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
+    "@iconify-json/heroicons": "^1.1.22",
+    "@iconify/tailwind": "^1.1.1",
+    "@iconify/vue": "^4.1.2",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/lodash-es": "^4.17.12",
