fix localhost not working

--- a/src/Timespace.Api/appsettings.json
+++ b/src/Timespace.Api/appsettings.json
@@ -8,10 +8,10 @@
 	"AllowedHosts": "*",
 	"CorsSettings": {
 		"CorsDomains": [
-			"http://localhost:5173"
+			"https://timespace.nl"
 		]
 	},
 	"SiteSettings": {
-		"FrontendSiteUrl": "http://localhost:5173"
+		"FrontendSiteUrl": "https://timespace.nl"
 	}
 }
