--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,56 +1,55 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build --force",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
-  },
-  "dependencies": {
-    "@primevue/themes": "^4.0.0",
-    "@tanstack/vue-query": "^5.51.1",
-    "@vuelidate/core": "^2.0.3",
-    "@vuelidate/validators": "^2.0.4",
-    "axios": "^1.7.2",
-    "dayjs": "^1.11.11",
-    "iconify-icon": "^2.1.0",
-    "intl-tel-input": "^23.3.2",
-    "lodash-es": "^4.17.21",
-    "pinia": "^2.1.7",
-    "pretty-bytes": "^6.1.1",
-    "primevue": "^4.0.0",
-    "vue": "^3.4.29",
-    "vue-i18n": "^9.13.1",
-    "vue-router": "^4.3.3"
-  },
-  "devDependencies": {
-    "@iconify-json/heroicons": "^1.1.22",
-    "@iconify/tailwind": "^1.1.1",
-    "@iconify/vue": "^4.1.2",
-    "@rushstack/eslint-patch": "^1.8.0",
-    "@tsconfig/node20": "^20.1.4",
-    "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.14.5",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "@vue/eslint-config-typescript": "^13.0.0",
-    "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-vue": "^9.23.0",
-    "npm-run-all2": "^6.2.0",
-    "postcss": "^8.4.39",
-    "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.4",
-    "typescript": "~5.4.0",
-    "vite": "^5.3.1",
-    "vite-plugin-vue-devtools": "^7.3.1",
-    "vue-tsc": "^2.0.21"
-  }
+	"name": "frontend",
+	"version": "0.0.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "run-p type-check \"build-only {@}\" --",
+		"preview": "vite preview",
+		"build-only": "vite build",
+		"type-check": "vue-tsc --build --force",
+		"lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+		"format": "prettier --write src/"
+	},
+	"dependencies": {
+		"@primevue/themes": "^4.0.0",
+		"@tanstack/vue-query": "^5.51.1",
+		"@vuelidate/core": "^2.0.3",
+		"@vuelidate/validators": "^2.0.4",
+		"axios": "^1.7.2",
+		"dayjs": "^1.11.11",
+		"iconify-icon": "^2.1.0",
+		"intl-tel-input": "^23.3.2",
+		"lodash-es": "^4.17.21",
+		"pinia": "^2.1.7",
+		"pretty-bytes": "^6.1.1",
+		"primevue": "^4.0.2",
+		"tailwindcss-primeui": "^0.3.4",
+		"vue": "^3.4.29",
+		"vue-i18n": "^9.13.1",
+		"vue-router": "^4.3.3"
+	},
+	"devDependencies": {
+		"@iconify/vue": "^4.1.2",
+		"@rushstack/eslint-patch": "^1.8.0",
+		"@tsconfig/node20": "^20.1.4",
+		"@types/lodash-es": "^4.17.12",
+		"@types/node": "^20.14.5",
+		"@vitejs/plugin-vue": "^5.0.5",
+		"@vue/eslint-config-prettier": "^9.0.0",
+		"@vue/eslint-config-typescript": "^13.0.0",
+		"@vue/tsconfig": "^0.5.1",
+		"autoprefixer": "^10.4.19",
+		"eslint": "^8.57.0",
+		"eslint-plugin-vue": "^9.23.0",
+		"npm-run-all2": "^6.2.0",
+		"postcss": "^8.4.39",
+		"prettier": "^3.2.5",
+		"tailwindcss": "^3.4.4",
+		"typescript": "~5.4.0",
+		"vite": "^5.3.1",
+		"vite-plugin-vue-devtools": "^7.3.1",
+		"vue-tsc": "^2.0.21"
+	}
 }
