Implement new features and fix bugs
This commit includes modifications to the following files:
- frontend/package.json
- frontend/pnpm-lock.yaml
- frontend/src/features/dashboard/DashboardView.vue
- frontend/src/features/dashboard/header/DashboardAsideNavigation.vue
- frontend/src/features/dashboard/header/DashboardAsideNavigationItem.vue
- frontend/src/features/dashboard/header/DashboardAsideNavigationItems.vue
- frontend/src/features/dashboard/header/DashboardHeader.vue
- frontend/src/features/dashboard/header/UserAccountMenu.vue
- frontend/src/features/dashboard/header/composables/sidebar.ts
- frontend/src/features/dashboard/header/types.ts
- frontend/src/features/employees/time/ClockHoursModal.vue
- frontend/src/features/employees/time/TimeView.vue
- frontend/src/features/manager/time/TimeView.vue
- frontend/src/features/manager/time/validate/ValidateHoursView.vue
- frontend/src/features/shared/formfields/FormInputTypes.ts
- frontend/src/features/shared/formfields/formInputs.ts
- frontend/src/features/shared/formfields/wrappers/DatePicker.vue
- frontend/src/features/shared/formfields/wrappers/InputMask.vue
- frontend/src/features/shared/formfields/wrappers/TimeInput.vue
- frontend/src/features/shared/transitions/ScaleInTransition.vue
- frontend/src/features/users/accounts/queries/meQuery.ts
- frontend/src/infrastructure/authorization/permissionStore.ts
- frontend/src/infrastructure/authorization/permissions.ts
- frontend/src/infrastructure/i18n/locales/en.json
- frontend/src/infrastructure/i18n/locales/nl.json
- frontend/src/infrastructure/layouts/AppLayout/AppLayout.vue
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/datepicker/index.js
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/dialog/index.js
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/iconfield/index.js
- frontend/src/infrastructure/plugins/primevue/presets/CustomAura/inputtext/index.js
- frontend/src/infrastructure/plugins/primevue/presets/Custo

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
 		"format": "prettier --write src/"
 	},
 	"dependencies": {
+		"@formkit/auto-animate": "^0.8.2",
 		"@primevue/themes": "^4.0.0",
 		"@tanstack/vue-query": "^5.51.1",
 		"@vuelidate/core": "^2.0.3",
@@ -26,6 +27,7 @@
 		"pretty-bytes": "^6.1.1",
 		"primevue": "^4.0.2",
 		"tailwindcss-primeui": "^0.3.4",
+		"temporal-polyfill": "^0.2.5",
 		"vue": "^3.4.29",
 		"vue-i18n": "^9.13.1",
 		"vue-router": "^4.3.3"
