--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,45 +13,46 @@
 		"format": "prettier --write src/"
 	},
 	"dependencies": {
+		"@formatjs/intl-durationformat": "^0.2.4",
 		"@formkit/auto-animate": "^0.8.2",
-		"@primevue/themes": "^4.0.0",
-		"@tanstack/vue-query": "^5.51.1",
+		"@primevue/themes": "^4.0.4",
+		"@tanstack/vue-query": "^5.51.21",
 		"@vuelidate/core": "^2.0.3",
 		"@vuelidate/validators": "^2.0.4",
-		"axios": "^1.7.2",
-		"dayjs": "^1.11.11",
+		"axios": "^1.7.3",
+		"dayjs": "^1.11.12",
 		"iconify-icon": "^2.1.0",
-		"intl-tel-input": "^23.3.2",
+		"intl-tel-input": "^23.8.0",
 		"lodash-es": "^4.17.21",
-		"pinia": "^2.1.7",
+		"pinia": "^2.2.1",
 		"pretty-bytes": "^6.1.1",
-		"primevue": "^4.0.2",
+		"primevue": "^4.0.4",
 		"tailwindcss-primeui": "^0.3.4",
 		"temporal-polyfill": "^0.2.5",
-		"vue": "^3.4.29",
+		"vue": "^3.4.36",
 		"vue-i18n": "^9.13.1",
-		"vue-router": "^4.3.3"
+		"vue-router": "^4.4.3"
 	},
 	"devDependencies": {
 		"@iconify/vue": "^4.1.2",
-		"@rushstack/eslint-patch": "^1.8.0",
+		"@rushstack/eslint-patch": "^1.10.4",
 		"@tsconfig/node20": "^20.1.4",
 		"@types/lodash-es": "^4.17.12",
-		"@types/node": "^20.14.5",
-		"@vitejs/plugin-vue": "^5.0.5",
+		"@types/node": "^20.14.14",
+		"@vitejs/plugin-vue": "^5.1.2",
 		"@vue/eslint-config-prettier": "^9.0.0",
 		"@vue/eslint-config-typescript": "^13.0.0",
 		"@vue/tsconfig": "^0.5.1",
-		"autoprefixer": "^10.4.19",
+		"autoprefixer": "^10.4.20",
 		"eslint": "^8.57.0",
-		"eslint-plugin-vue": "^9.23.0",
-		"npm-run-all2": "^6.2.0",
-		"postcss": "^8.4.39",
-		"prettier": "^3.2.5",
-		"tailwindcss": "^3.4.4",
-		"typescript": "~5.4.0",
-		"vite": "^5.3.1",
-		"vite-plugin-vue-devtools": "^7.3.1",
-		"vue-tsc": "^2.0.21"
+		"eslint-plugin-vue": "^9.27.0",
+		"npm-run-all2": "^6.2.2",
+		"postcss": "^8.4.41",
+		"prettier": "^3.3.3",
+		"tailwindcss": "^3.4.7",
+		"typescript": "~5.4.5",
+		"vite": "^5.3.5",
+		"vite-plugin-vue-devtools": "^7.3.7",
+		"vue-tsc": "^2.0.29"
 	}
 }
