--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -58,5 +58,9 @@
 		<None Remove=".\Infrastructure\Email\Templates\*.sbntxt" />
 		<EmbeddedResource Include=".\Infrastructure\Email\Templates\*.sbntxt" Kind="Text" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Features\Time\Employees\Exceptions\" />
+	</ItemGroup>
 	
 </Project>
