--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -1,7 +1,7 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "include": [
-    "vite.config.*",
+    "vite.config.ts",
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
@@ -11,7 +11,7 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
+	"allowJs": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "types": ["node"]
