--- a/src/Timespace.Api/Timespace.Api.csproj
+++ b/src/Timespace.Api/Timespace.Api.csproj
@@ -47,6 +47,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Content Include="..\..\.dockerignore">
+		  <Link>.dockerignore</Link>
+		</Content>
 		<Content Include="..\.dockerignore">
 			<Link>.dockerignore</Link>
 		</Content>
